--- a/index.html
+++ b/index.html
@@ -66,25 +66,116 @@
                 <h1>Explore Your Travel</h1>
                 <h4>Explore the world with BongoTravel. We always try provaid the best travel expriance.</h4>
                 <div class="find-des">
+
                     <input type="text" placeholder="Where go">
+
                     <select>
                         <option disabled selected>When</option>
                     </select>
+
                     <select>
                         <option disabled selected>Select Type</option>
                     </select>
+
                     <button type="submit">
-                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                            viewBox="0 0 24 24" fill="none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path
                                 d="M21 21L15.803 15.803M15.803 15.803C17.2096 14.3965 17.9998 12.4887 17.9998 10.4995C17.9998 8.51035 17.2096 6.60262 15.803 5.19605C14.3964 3.78947 12.4887 2.99927 10.4995 2.99927C8.51031 2.99927 6.60258 3.78947 5.196 5.19605C3.78943 6.60262 2.99922 8.51035 2.99922 10.4995C2.99922 12.4887 3.78943 14.3965 5.196 15.803C6.60258 17.2096 8.51031 17.9998 10.4995 17.9998C12.4887 17.9998 14.3964 17.2096 15.803 15.803Z"
                                 stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg> -->
+                        </svg>
                         Find Now</button>
                 </div>
             </div>
         </div>
     </section>
+    <section>
+        <div class="section-2">
+            <div class="section-2-content">
+                <h1>Our Popular Tours</h1><br>
+                <p>Welcome to our popular tours, where we offer an array of unforgettable journeys for you to embark on.
+                    Among the many destinations we cater to, Bandarban stands out as the most frequented by travellers
+                    from BongoTravel.</p>
+                <ul>
+                    <li>Bandarban, a district in South-Eastern Bangladesh, is known for its stunning landscapes, rich
+                        cultural heritage, and welcoming locals. It’s a place where every journey becomes an adventure
+                        and every moment is filled with awe-inspiring sights.</li>
+                    <li>At BongoTravel, we believe that a great travel experience is incomplete without delicious food
+                        and knowledgeable guides. We ensure the best food quality on all our tours. Our meals are
+                        prepared with fresh, local ingredients that are not only healthy but also give you a taste of
+                        the local cuisine.</li>
+                    <li>To make your journey as comfortable as possible, we offer a Sleeper Bus service. Our buses are
+                        equipped with all the amenities you need for a comfortable journey, including spacious seats,
+                        air conditioning, and more. </li>
+                </ul>
+                <p>So, don't miss the chance to visit Bandarban with us. It's more than just a tour, it's an experience
+                    that will leave you with unforgettable memories and stories to tell. Book your tour today and embark
+                    on an adventure of a lifetime with BongoTravel.</p>
+                <button>Read more</button>
+            </div>
+            <div>
+                <img src="images/hero-img2.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="section-3">
+        <div class="section-3-texts">
+            <h1>Choose Your Destination</h1>
+            <p>We offer best Travel package just choose most suitable for you.</p>
+        </div>
+        <div class="section-3-content">
+
+            <div class="mcfirst">
+                <div class="section-3-content-main"><img src="/images/Maldivs.png" alt="" id="s3-1">
+                    <div class="centered-text">
+                        <h2>Maldivs</h2>
+                    </div>
+                </div>
+
+                <div class="section-3-content-main">
+                    <img src="/images/Indonesia.png" alt="">
+                    <div class="centered-text">
+                        <h2>Indonesia</h2>
+                    </div>
+                </div>
+
+            </div>
+            <div class="mc2nd">
+                <div class="section-3-content-main">
+                    <img src="/images/Srilanka.png" alt="">
+                    <div class="centered-text">
+                        <h2>Sri Lanka</h2>
+                    </div>
+                </div>
+                <div class="section-3-content-main">
+                    <img src="/images/NorthAmerica.png" alt="">
+                    <div class="centered-text">
+                        <h2>North America</h2>
+                    </div>
+                </div>
+                <div class="section-3-content-main">
+                    <img src="/images/Kashmir.png" alt="">
+                    <div class="centered-text">
+                        <h2>Kashmir</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mc3rd">
+                <div class="section-3-content-main">
+                    <img src="/images/bangladesh.png" alt="">
+                    <div class="centered-text">
+                        <h2>Bangladesh</h2>
+                    </div>
+                </div>
+                <div class="section-3-content-main">
+                    <img src="/images/Bandarban.png" alt="">
+                    <div class="centered-text">
+                        <h2>Bandarban</h2>
+                    </div>
+                </div>
+
+    </section>
+
 </body>
 
 </html>
