--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <button>Read more</button>
             </div>
             <div>
-                <img src="images/hero-img2.png" alt="">
+                <img class="image-fill" src="./images/hero-img2.png" alt="">
             </div>
         </div>
     </section>
@@ -125,14 +125,14 @@
         <div class="section-3-content">
 
             <div class="mcfirst">
-                <div class="section-3-content-main"><img class="image-fill" src="/images/Maldivs.png" alt="" id="s3-1">
+                <div class="section-3-content-main"><img class="image-fill" src="./images/Maldivs.png" alt="" id="s3-1">
                     <div class="centered-text">
                         <h2>Maldivs</h2>
                     </div>
                 </div>
 
                 <div class="section-3-content-main">
-                    <img class="image-fill" src="/images/Indonesia.png" alt="">
+                    <img class="image-fill" src="./images/Indonesia.png" alt="">
                     <div class="centered-text">
                         <h2>Indonesia</h2>
                     </div>
@@ -141,19 +141,19 @@
             </div>
             <div class="mc2nd">
                 <div class="section-3-content-main">
-                    <img class="image-fill" src="/images/Srilanka.png" alt="">
+                    <img class="image-fill" src="./images/Srilanka.png" alt="">
                     <div class="centered-text">
                         <h2>Sri Lanka</h2>
                     </div>
                 </div>
                 <div class="section-3-content-main">
-                    <img class="image-fill" src="/images/NorthAmerica.png" alt="">
+                    <img class="image-fill" src="./images/NorthAmerica.png" alt="">
                     <div class="centered-text">
                         <h2>North America</h2>
                     </div>
                 </div>
                 <div class="section-3-content-main">
-                    <img class="image-fill" src="/images/Kashmir.png" alt="">
+                    <img class="image-fill" src="./images/Kashmir.png" alt="">
                     <div class="centered-text">
                         <h2>Kashmir</h2>
                     </div>
@@ -162,13 +162,13 @@
 
             <div class="mc3rd">
                 <div class="section-3-content-main">
-                    <img class="image-fill" src="/images/bangladesh.png" alt="">
+                    <img class="image-fill" src="./images/bangladesh.png" alt="">
                     <div class="centered-text">
                         <h2>Bangladesh</h2>
                     </div>
                 </div>
                 <div class="section-3-content-main">
-                    <img class="image-fill" src="/images/Bandarban.png" alt="">
+                    <img class="image-fill" src="./images/Bandarban.png" alt="">
                     <div class="centered-text">
                         <h2>Bandarban</h2>
                     </div>
@@ -970,11 +970,11 @@
             </ul>
             <button class="btm-lg-txt">See more</button>
         </div>
-        <div class="section-content"><iframe width="560" height="315"
-                src="https://www.youtube.com/embed/SjB9Gwq-q7g?si=UfuoTCe4CiFGG-cG" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe></div>
+        <div>
+            <video class="section-6-content" width="320" height="240" controls>
+                <source src="./videos/mountain.mp4" type="video/mp4">
+              </video>
+            </div>
 
         <div></div>
     </section>
