--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                 <li>Testimonial</li>
                 <li>Blog</li>
                 <li>Contact</li>
+                <svg class="hambur" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M3.75 6.75H20.25M3.75 12H20.25M3.75 17.25H20.25" stroke="#131318" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
             </ul>
         </nav>
     </header>
@@ -988,7 +991,7 @@
             <button>Subscribe</button>
         </div>
         <div class="newsletter-promo">
-            <img class="image-fill" src="/images/promo-img.png" alt="">
+            <img class="image-fill" src="./images/promo-img.png" alt="">
             <div class="promo-text">
                 <h3>BongoTravel.com</h3>
                 <h2>Save Up to 70% on Your Next Tours</h2>
