added bonus option and final

--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,18 @@
         </div>
 
     </section>
+
+    <section class="bonus">
+        <div><img src="./images/gift.png" alt=""></div>
+        <div class="bonus-text">
+            <h2 class="padding20">Enjoy an additional 10% discount on your initial purchase!</h2>
+            <h2 class="padding20" style="color: #EA3333;">NEW10</h2>
+            <p class="padding20">Apply this coupon code for a special discount on your initial tour booking!</p>
+        </div>
+        </div>
+
+    </section>
+
     <section class="footer">
         <div class="footer-texts">
             <div class="logo footer-texts-logo">
